--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,12 @@ input[type=number] {
   font-size: 16px !important;
   width: 100% !important;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
